<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="360dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/keyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="360dp"
        android:layout_height="500dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        android:rotationX="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="20dp"
                app:iconTint="@color/white" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="20dp"
                app:iconTint="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="20dp"
                app:iconTint="@color/white" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="20dp"
                app:iconTint="@color/white" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="20dp"
                app:iconTint="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="20dp"
                app:iconTint="@color/white" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="20dp"
                app:iconTint="@color/white" />

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="20dp"
                app:iconTint="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <Button
                android:id="@+id/asterisk"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/star"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="20dp"
                app:iconTint="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="20dp"
                app:iconTint="@color/white" />

            <Button
                android:id="@+id/hashtag"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/hashtage"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="20dp"
                app:iconTint="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <Button
                android:id="@+id/button20"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/button"
                android:visibility="gone"
                app:cornerRadius="20dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/dial"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/dial"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="20dp"
                app:icon="@android:drawable/stat_sys_phone_call_forward"
                app:iconSize="30sp"
                app:iconTint="@color/white" />

            <Button
                android:id="@+id/delete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:cornerRadius="20dp"
                app:iconTint="@color/white" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>